--- a/www/index.html
+++ b/www/index.html
@@ -13,10 +13,11 @@
         function onDeviceReady() {
             console.log("PhoneGap is ready");
         }
+    
     </script>
 </head>
 <body>
-
+    <p>hello omido</p>
     <h1>Welcome to Monaca!</h1>
     <a class="button--large" href="phonegap-demo.html">Start Demo</a>
 
