--- a/www/index.html
+++ b/www/index.html
@@ -16,8 +16,9 @@
     
     </script>
 </head>
-<body>
+<body>ß
     <p>hello omido</p>
+    <p>今日は早く寝る</p>
     <h1>Welcome to Monaca!</h1>
     <a class="button--large" href="phonegap-demo.html">Start Demo</a>
 
