--- a/www/index.html
+++ b/www/index.html
@@ -16,9 +16,12 @@
     
     </script>
 </head>
-<body>ß
+<body>
     <p>hello omido</p>
     <p>今日は早く寝る</p>
+    <p>
+        これはOmidoによる変更です
+    </p>
     <h1>Welcome to Monaca!</h1>
     <a class="button--large" href="phonegap-demo.html">Start Demo</a>
 
