--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,10 @@
     <p>hello omido</p>
     <p>今日は早く寝る</p>
     <p>
-        これは大御堂による変更です
+        これは大御堂さんによる変更です
+    </p>
+    <p>
+        from master branch
     </p>
     <h1>Welcome to Monaca!</h1>
     <a class="button--large" href="phonegap-demo.html">Start Demo</a>
