--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
     <p>hello omido</p>
     <p>今日は早く寝る</p>
     <p>
-        これは大御堂による変更です
+        これは大御堂くんによる変更です
     </p>
     <p>
         from test branch
